<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">AVNC</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="biometric_or_screen_lock_prompt_message">Use your biometric or screen lock to continue</string>
    <string name="biometric_prompt_message">Use your biometric to continue</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="copy">Copy</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="desc_add_new_server_btn">Add server</string>
    <string name="desc_back_btn">Back</string>
    <string name="desc_clear_url_btn">Clear</string>
    <string name="desc_discovered_list">List of automatically discovered servers</string>
    <string name="desc_discovered_servers_tab">Discovered servers</string>
    <string name="desc_discovery_btn">Discover servers</string>
    <string name="desc_discovery_running">Discovering servers on you network</string>
    <string name="desc_discovery_stop_btn">Stop discovering servers</string>
    <string name="desc_help_btn">Help</string>
    <string name="desc_keyboard_btn">Open keyboard</string>
    <string name="desc_navigation_btn">Open navigation drawer</string>
    <string name="desc_reset_zoom_btn">Reset zoom</string>
    <string name="desc_retry_connection_btn">Retry</string>
    <string name="desc_save_discovered_server_btn">Save</string>
    <string name="desc_saved_servers_list">List of saved Servers</string>
    <string name="desc_saved_servers_tab">Saved servers</string>
    <string name="desc_server_url">Server address</string>
    <string name="desc_settings_btn">Settings</string>
    <string name="desc_virtual_keys_btn">Show virtual keys</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="face_or_screen_lock_prompt_message">Use your face or screen lock to continue</string>
    <string name="face_prompt_message">Use your face to continue</string>
    <string name="fingerprint_dialog_icon_description">Fingerprint icon</string>
    <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
    <string name="fingerprint_error_hw_not_available">Fingerprint hardware not available.</string>
    <string name="fingerprint_error_hw_not_present">This device does not have a fingerprint sensor</string>
    <string name="fingerprint_error_lockout">Too many attempts. Please try again later.</string>
    <string name="fingerprint_error_no_fingerprints">No fingerprints enrolled.</string>
    <string name="fingerprint_error_user_canceled">Fingerprint operation canceled by user.</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="fingerprint_or_screen_lock_prompt_message">Use your fingerprint or screen lock to continue</string>
    <string name="fingerprint_prompt_message">Use your fingerprint to continue</string>
    <string name="generic_error_no_device_credential">No PIN, pattern, or password set.</string>
    <string name="generic_error_no_keyguard">This device does not support PIN, pattern, or password.</string>
    <string name="generic_error_user_canceled">Authentication canceled by user.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_host">Host</string>
    <string name="hint_key_password">Key password</string>
    <string name="hint_password">Password</string>
    <string name="hint_port">Port</string>
    <string name="hint_repeater_host">Repeater host</string>
    <string name="hint_server_id">Server ID</string>
    <string name="hint_server_name">Name (e.g. Work PC)</string>
    <string name="hint_urlbar">Connect to a Server</string>
    <string name="hint_username">Username</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="msg_about_app">"A fast and secure VNC client. Remotely view and control any device running a VNC server.


AVNC is an open source and copyleft software — made with help from many contributors."</string>
    <string name="msg_copied_to_clipboard">Copied</string>
    <string name="msg_drag_gesture_help">"Assigning an action to Drag gesture will change Long press detection:

"<b>Press-hold-release</b>" → Long press
"<b>Press-hold-swipe</b> → Drag</string>
    <string name="msg_export_auth_missing">Your device is not secured. Turn on screen lock to enable authentication before export.</string>
    <string name="msg_export_auth_required">Authenticate to export servers</string>
    <string name="msg_exported">Exported</string>
    <string name="msg_hide_remote_pointer_option_moved">"'Hide remote pointer' is now available in 
'Settings → Input → Mouse'"</string>
    <string name="msg_imported">Imported</string>
    <string name="msg_invalid_key_file">Invalid private key file</string>
    <string name="msg_invalid_vnc_uri">Invalid VNC URI</string>
    <string name="msg_key_compat_mode_help">Some servers have limited Unicode support. Legacy key events can help input non-English text.</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_pip_not_supported">Not supported on this device</string>
    <string name="msg_ptr_hiding_not_supported">Not supported on this device</string>
    <string name="msg_server_profile_added">Server added</string>
    <string name="msg_server_profile_deleted">Server deleted</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="pref_clipboard_sync">Clipboard sync</string>
    <string name="pref_cred_autocomplete">Auto-completion</string>
    <string name="pref_cred_autocomplete_summary">Suggest saved logins when connecting to new servers</string>
    <string name="pref_credential">Login</string>
    <string name="pref_discovery">Discovery</string>
    <string name="pref_discovery_autorun">Autorun</string>
    <string name="pref_discovery_autorun_summary">Discover servers while on homepage</string>
    <string name="pref_enable_pip">Picture-in-picture</string>
    <string name="pref_fullscreen">Fullscreen</string>
    <string name="pref_orientation">Screen orientation</string>
    <string name="pref_rediscovery_indicator">Highlight rediscovered servers</string>
    <string name="pref_servers">Servers</string>
    <string name="pref_toolbar">Toolbar</string>
    <string name="pref_toolbar_alignment">Alignment</string>
    <string name="pref_viewer">Viewer</string>
    <string name="pref_zoom">Zoom</string>
    <string name="pref_zoom_max">Maximum</string>
    <string name="pref_zoom_min">Minimum</string>
    <string name="tip_discovery">"Discovery can automatically find supported servers
running on your network."</string>
    <string name="tip_empty_server_list">"Server list is empty.
Click '"<b>+</b>"' to add a server, or
use the top address bar to connect directly."</string>
    <string name="title_github_repo">Source code</string>
    <string name="title_key_compat_mode">Send legacy key events</string>
    <string name="title_license">Licence</string>
    <string name="title_open_source_libraries">Open source libraries</string>
    <string name="title_password">Password</string>
    <string name="title_private_key">Private key</string>
    <string name="title_remember">Remember</string>
    <string name="title_save">Save</string>
    <string name="title_use_repeater">Use repeater</string>
    <string name="title_use_ssh_tunnel">Use SSH tunnel</string>
    <string name="title_view_only_mode">View-only</string>
</resources>