<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen app:title="@string/pref_viewer"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference android:entries="@array/orientation_entries" android:title="@string/pref_orientation" android:key="viewer_orientation" android:defaultValue="auto" android:entryValues="@array/orientation_values" app:useSimpleSummaryProvider="true" />
    <SwitchPreference app:defaultValue="true" app:key="fullscreen_display" app:title="@string/pref_fullscreen" />
    <SwitchPreference app:defaultValue="false" app:key="pip_enabled" app:title="@string/pref_enable_pip" />
    <PreferenceCategory app:icon="@drawable/ic_zoom_in" app:title="@string/pref_zoom">
        <SeekBarPreference android:max="100" app:defaultValue="50" app:key="zoom_min" app:min="10" app:showSeekBarValue="true" app:title="@string/pref_zoom_min" />
        <SeekBarPreference android:max="1000" app:defaultValue="500" app:key="zoom_max" app:min="100" app:showSeekBarValue="true" app:title="@string/pref_zoom_max" />
    </PreferenceCategory>
    <PreferenceCategory app:icon="@drawable/ic_toolbar" app:title="@string/pref_toolbar">
        <ListPreference app:defaultValue="start" app:entries="@array/toolbar_alignment_entries" app:entryValues="@array/toolbar_alignment_values" app:key="toolbar_alignment" app:title="@string/pref_toolbar_alignment" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>