<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/server_discovery_0" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.recyclerview.widget.RecyclerView android:id="@id/discovered_rv" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/desc_discovered_list" style="@style/ServerList" />
    <TextView android:tag="binding_1" android:visibility="gone" android:text="@string/tip_discovery" style="@style/TipView" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="end|bottom|center" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_normal" android:src="@drawable/ic_refresh" android:contentDescription="@string/desc_discovery_btn" style="@style/Widget.MaterialComponents.FloatingActionButton" />
    <ProgressBar android:layout_gravity="end|bottom|center" android:tag="binding_3" android:layout_width="@dimen/action_btn_size" android:layout_height="@dimen/action_btn_size" android:layout_margin="@dimen/margin_normal" android:indeterminate="true" android:contentDescription="@string/desc_discovery_running" style="@style/Widget.MaterialComponents.CircularProgressIndicator" />
    <ImageButton android:layout_gravity="end|bottom|center" android:tag="binding_4" android:layout_margin="@dimen/margin_normal" android:src="@drawable/ic_clear" android:contentDescription="@string/desc_discovery_stop_btn" app:tint="?colorSecondary" style="@style/ImageButton" />
</FrameLayout>