<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/fragment_profile_editor_advanced_0" android:background="?colorSurface" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="@dimen/urlbar_height" app:navigationContentDescription="@string/desc_back_btn" app:navigationIcon="@drawable/ic_arrow_back">
            <Button android:layout_gravity="end" android:id="@id/save_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_save" style="@style/Widget.MaterialComponents.Button.TextButton" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <androidx.constraintlayout.widget.ConstraintLayout android:padding="@dimen/padding_normal" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <EditText android:id="@id/name" android:tag="binding_1" android:hint="@string/hint_server_name" android:inputType="text" android:drawableStart="@drawable/ic_bookmark" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/FormField.EditText" />
            <EditText android:id="@id/host" android:tag="binding_2" android:inputType="textUri" app:layout_constraintEnd_toStartOf="@id/port" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/name" style="@style/FormField.EditText" />
            <EditText android:id="@id/port" android:tag="binding_3" android:hint="@string/hint_port" android:inputType="number" android:layout_marginStart="0.0dip" app:layout_constraintBottom_toBottomOf="@id/host" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/host" app:layout_constraintTop_toTopOf="@id/host" app:layout_constraintWidth_percent="0.2" style="@style/FormField.EditText" />
            <CheckBox android:id="@id/use_repeater" android:text="@string/title_use_repeater" app:layout_constraintEnd_toStartOf="@id/id_on_repeater" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/host" style="@style/FormField.CheckBox" />
            <EditText android:id="@id/id_on_repeater" android:tag="binding_4" android:minWidth="100.0dip" android:hint="@string/hint_server_id" android:inputType="number" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/use_repeater" app:layout_constraintTop_toBottomOf="@id/host" style="@style/FormField.EditText" />
            <CheckBox android:id="@id/view_only" android:tag="binding_5" android:text="@string/title_view_only_mode" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/use_repeater" style="@style/FormField.CheckBox" />
            <TextView android:id="@id/use_local_cursor" android:paddingTop="0.0dip" android:text="@string/msg_hide_remote_pointer_option_moved" android:drawablePadding="@dimen/padding_normal" android:paddingStart="@dimen/padding_small" app:drawableStartCompat="@drawable/ic_info" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view_only" style="@style/FormField.EditText" />
            <CheckBox android:id="@id/key_compat_mode" android:tag="binding_6" android:text="@string/title_key_compat_mode" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/use_local_cursor" style="@style/FormField.CheckBox" />
            <ImageButton android:id="@id/key_compat_mode_help_btn" android:src="@drawable/ic_help" android:contentDescription="@string/desc_help_btn" app:layout_constraintBottom_toBottomOf="@id/key_compat_mode" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/key_compat_mode" app:tint="?colorControlNormal" style="@style/ImageButton" />
            <ImageView android:id="@id/security_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_shield" android:importantForAccessibility="no" android:layout_marginStart="@dimen/margin_normal" android:tintMode="src_in" app:layout_constraintBottom_toBottomOf="@id/security" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/security" app:tint="?colorControlNormal" />
            <com.gaurav.avnc.util.SpinnerEx android:id="@id/security" android:paddingTop="@dimen/padding_small" android:paddingBottom="@dimen/padding_small" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="40.0dip" app:layout_constraintStart_toEndOf="@id/security_icon" app:layout_constraintTop_toBottomOf="@id/key_compat_mode" app:layout_constraintWidth_percent="0.6" />
            <EditText android:id="@id/username" android:tag="binding_7" android:hint="@string/hint_username" android:inputType="text" android:drawableStart="@drawable/ic_person" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/security" style="@style/FormField.EditText" />
            <EditText android:id="@id/password" android:tag="binding_8" android:hint="@string/hint_password" android:inputType="textPassword" android:drawableStart="@drawable/ic_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/username" style="@style/FormField.EditText" />
            <CheckBox android:id="@id/use_ssh_tunnel" android:text="@string/title_use_ssh_tunnel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/password" style="@style/FormField.CheckBox" />
            <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_9" android:layout_width="0.0dip" android:layout_height="wrap_content" android:animateLayoutChanges="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/use_ssh_tunnel">
                <EditText android:id="@id/ssh_host" android:tag="binding_10" android:inputType="textUri" android:drawableStart="@drawable/ic_computer" app:layout_constraintEnd_toStartOf="@id/ssh_port" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/FormField.EditText" />
                <EditText android:id="@id/ssh_port" android:tag="binding_11" android:inputType="number" app:layout_constraintBottom_toBottomOf="@id/ssh_host" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/ssh_host" app:layout_constraintTop_toTopOf="@id/ssh_host" app:layout_constraintWidth_percent="0.2" style="@style/FormField.EditText" />
                <EditText android:id="@id/ssh_username" android:tag="binding_12" android:hint="@string/hint_username" android:inputType="text" android:drawableStart="@drawable/ic_person" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ssh_host" style="@style/FormField.EditText" />
                <RadioGroup android:orientation="horizontal" android:id="@id/ssh_auth_type" android:paddingTop="@dimen/padding_small" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ssh_username" style="@style/FormField">
                    <RadioButton android:id="@id/ssh_auth_type_key" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_private_key" android:layout_weight="1.0" />
                    <RadioButton android:id="@id/ssh_auth_type_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_password" android:layout_weight="1.0" />
                </RadioGroup>
                <EditText android:id="@id/ssh_password" android:tag="binding_13" android:hint="@string/hint_password" android:inputType="textPassword" android:drawableStart="@drawable/ic_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ssh_auth_type" style="@style/FormField.EditText" />
                <Button android:id="@id/key_import_btn" android:tag="binding_14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_normal" app:icon="@drawable/ic_file" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ssh_auth_type" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
                <EditText android:id="@id/ssh_key_password" android:tag="binding_15" android:hint="@string/hint_key_password" android:inputType="textPassword" android:drawableStart="@drawable/ic_password" app:layout_constraintBaseline_toBaselineOf="@id/key_import_btn" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/key_import_btn" style="@style/FormField.EditText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>