<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/fragment_credential_0" android:padding="@dimen/padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout android:id="@id/username_layout" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_normal" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_username" android:inputType="text" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/password_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_normal" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_password" android:inputType="textPassword" android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" android:id="@id/remember" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_small" android:text="@string/title_remember" />
</LinearLayout>