<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:id="@id/drawer_layout" android:tag="layout/activity_home_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:touchscreenBlocksFocus="false">
            <LinearLayout android:gravity="center" android:id="@id/urlbar" android:focusable="true" android:nextFocusLeft="@id/navigation_btn" android:nextFocusRight="@id/settings_btn" android:layout_width="fill_parent" android:layout_height="@dimen/urlbar_height" android:touchscreenBlocksFocus="false" style="@style/UrlBar">
                <ImageButton android:id="@id/navigation_btn" android:nextFocusRight="@id/urlbar" android:src="@drawable/ic_menu" android:contentDescription="@string/desc_navigation_btn" style="@style/ImageButton" />
                <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/hint_urlbar" android:layout_weight="1.0" />
                <ImageButton android:id="@id/settings_btn" android:nextFocusLeft="@id/urlbar" android:src="@drawable/ic_settings" android:contentDescription="@string/desc_settings_btn" style="@style/ImageButton" />
            </LinearLayout>
            <com.google.android.material.tabs.TabLayout android:layout_gravity="bottom" android:id="@id/tab_layout" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.viewpager2.widget.ViewPager2 android:id="@id/pager" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView android:layout_gravity="start" android:id="@id/drawer_nav" android:layout_width="wrap_content" android:layout_height="fill_parent" app:headerLayout="@layout/home_drawer_header" app:menu="@menu/home_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>